--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,30 @@
+# Workflow requirement
 pre-commit
+
+# Basic Enviroment
+slideio==1.0.3
+numpy==1.23.1
+opencv-python==4.6.0.66
+scikit-image==0.19.3
+scikit-learn==1.1.1
+matplotlib==3.5.2
+tqdm==4.64.0
+lycon==0.2.0
+pqdm==0.2.0
+imageio==2.19.5
+perlin_noise==1.12
+tensorboard==2.9.1
+timm==0.5.4
+
+# Jupyter Labs
+jupyterlab==3.4.4
+ipympl==0.9.1
+
+# Auto-Documenter
+pydoctor==22.7.0
+
+# Torch
+--extra-index-url https://download.pytorch.org/whl/cu113
+torch==1.11.0+cu113
+torchaudio==0.11.0+cu113
+torchvision==0.12.0+cu113
