--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.tar filter=lfs diff=lfs merge=lfs -text
+docs/*.pdf filter=lfs diff=lfs merge=lfs -text
